@@ -75,9 +75,6 @@ main(int argc, char* argv[])
         LogComponentEnable("GtpTunnelApp", LOG_LEVEL_ALL);
     }
 
-    // Enable checksum computations (required by OFSwitch13 module)
-    GlobalValue::Bind("ChecksumEnabled", BooleanValue(true));
-
     // Create two host nodes
     NodeContainer hosts;
     hosts.Create(2);
