@@ -21,6 +21,8 @@
 
 #include "ofswitch13-external-helper.h"
 
+#include <ns3/global-value.h>
+
 namespace ns3
 {
 
@@ -88,6 +90,9 @@ OFSwitch13ExternalHelper::CreateOpenFlowChannels()
 
     // Block this helper to avoid further calls to install methods.
     m_blocked = true;
+
+    // Enable checksum computations (mandatory for this module)
+    GlobalValue::Bind("ChecksumEnabled", BooleanValue(true));
 
     // Create and start the connections between switches and controllers.
     switch (m_channelType)
