@@ -12,6 +12,9 @@ Release 5.X.X (XXX XX, XXXX)
 
 - Renaming OFSwitch13Helper::ChannelType enum values to match coding style.
 
+- Automatically enabling checksum computations in
+  OFSwitch13Helper::CreateOpenFlowChannel() methods.
+
 - This version is compatible with ns-3 versions 3.38 to 3.40 (including
   patches). There is no backward compatibility with older ns-3 versions.
 
